Update credentials Mysql database

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "0  2021-09-25  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        "0  a small fishing village must procure a local d...     99  2021-03-30  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +725,7 @@
        "0  2021-09-25          90   "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "      <td>documentaries</td>\n",
        "      <td>as her father nears the end of his life, filmm...</td>\n",
        "      <td>29</td>\n",
-       "      <td>2021-03-30</td>\n",
+       "      <td>2021-09-25</td>\n",
        "      <td>90</td>\n",
        "      <td>min</td>\n",
        "    </tr>\n",
@@ -849,10 +849,10 @@
        "0  documentaries  as her father nears the end of his life, filmm...     29   \n",
        "\n",
        "         date duration_int duration_type  \n",
-       "0  2021-03-30          90            min  "
+       "0  2021-09-25          90            min  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,23 +891,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Credenciales de la base de datos creada en Free MySQL Hosting\n",
-    "user = 'sql10591684'\n",
-    "password = '2vv82khQDF'\n",
+    "user = 'sql10602710'\n",
+    "password = 'CsendKslmw'\n",
     "host = 'sql10.freemysqlhosting.net'\n",
     "port = 3306\n",
-    "database = 'sql10591684'\n",
+    "database = 'sql10602710'\n",
     "database_connection = db.create_engine(url=\"mysql+pymysql://{0}:{1}@{2}:{3}/{4}\".format(\n",
     "            user, password, host, port, database))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
        "0         113            min  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
        "9668"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1085,7 @@
        "1450"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1118,7 @@
        "3073"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1151,7 @@
        "8807"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
